[gd_scene load_steps=30 format=2]

[ext_resource path="res://scenes/menu/shine_select_screen/frame_bottom.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/shared/background/backgrounds/dusk/dusk.png" type="Texture" id=3]
[ext_resource path="res://scenes/menu/127BackButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menu/shine_select_screen/shine_select_screen.gd" type="Script" id=5]
[ext_resource path="res://scenes/menu/shine_select_screen/LetsaGo.gd" type="Script" id=6]
[ext_resource path="res://scenes/menu/shine_select_screen/letsa go/Mario1.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/menu/shine_select_screen/letsa go/Mario2.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/menu/shine_select_screen/letsa go/Luigi1.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/menu/shine_select_screen/Mission_Select.wav" type="AudioStream" id=10]
[ext_resource path="res://scenes/menu/shine_select_screen/letsa go/Luigi2.wav" type="AudioStream" id=11]
[ext_resource path="res://scenes/menu/shine_select_screen/frame_top.png" type="Texture" id=12]
[ext_resource path="res://scenes/menu/shine_select_screen/Mission_Starts.wav" type="AudioStream" id=13]
[ext_resource path="res://scenes/menu/shine_select_screen/Mission_Focus.wav" type="AudioStream" id=14]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/sm256.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 8
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 26
outline_color = Color( 0.054902, 0, 0.25098, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_color = Color( 0.054902, 0, 0.25098, 1 )
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="Theme" id=10]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 5 )
Button/styles/focus = SubResource( 6 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 9 )

[sub_resource type="Animation" id=11]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureFrameTop:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureFrameBottom:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=12]
resource_name = "select_shine"
length = 2.25
tracks/0/type = "method"
tracks/0/path = NodePath("TransitionAudio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureFrameBottom:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 128 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureFrameTop:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -162 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TransitionRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "trans_in_LevelsScreen_ShineSelectScreen"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "trans_out_LevelsScreen_ShineSelectScreen"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ShineSelectScreen" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureFrameTop" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTitleBacking" type="Label" parent="TextureFrameTop"]
anchor_left = 0.2
anchor_top = 0.05
anchor_right = 0.8
anchor_bottom = 0.183
margin_left = -153.6
margin_top = 6.4
margin_right = 153.6
margin_bottom = -11.056
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "My Level"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTitle" type="Label" parent="TextureFrameTop"]
anchor_left = 0.2
anchor_top = 0.05
anchor_right = 0.8
anchor_bottom = 0.183
margin_left = -153.6
margin_top = 2.4
margin_right = 153.6
margin_bottom = -15.056
custom_fonts/font = SubResource( 2 )
text = "My Level"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShineTitle" type="Label" parent="TextureFrameTop"]
anchor_left = 0.1
anchor_top = 0.234
anchor_right = 0.9
anchor_bottom = 0.329
margin_left = 0.199997
margin_top = -41.088
margin_right = -0.199951
margin_bottom = -0.127991
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The Rainbow Shine Sprite"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureFrameBottom" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 0.000366211
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShineDescription" type="Label" parent="TextureFrameBottom"]
anchor_left = 0.15
anchor_top = 0.768
anchor_right = 0.85
anchor_bottom = 1.0
margin_left = -65.2
margin_top = -26.7763
margin_right = 65.2
margin_bottom = -8.00037
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This is a description get stick bugged lol"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" parent="TextureFrameBottom" instance=ExtResource( 4 )]
margin_left = 7.0
margin_top = 393.0
margin_right = 6.744
margin_bottom = 393.032

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 0.947917
anchor_bottom = 0.907407
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ShineParent" type="Node2D" parent="."]
position = Vector2( 384, 216 )

[node name="Tween" type="Tween" parent="."]

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMoveLeft" type="Button" parent="Buttons"]
anchor_top = 3.7
anchor_right = 6.49
anchor_bottom = 7.2
theme = SubResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMoveRight" type="Button" parent="Buttons"]
anchor_left = 12.5
anchor_top = 3.7
anchor_right = 19.2
anchor_bottom = 7.2
theme = SubResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSelectShine" type="Button" parent="Buttons"]
anchor_left = 6.5
anchor_top = 3.7
anchor_right = 12.5
anchor_bottom = 7.2
theme = SubResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -3.0

[node name="MissionFocus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -4.0

[node name="LetsaGo" type="Node" parent="."]
script = ExtResource( 6 )
mario_voices = [ ExtResource( 7 ), ExtResource( 8 ) ]
luigi_voices = [ ExtResource( 9 ), ExtResource( 11 ) ]

[node name="LetsaGoPlayer" type="AudioStreamPlayer" parent="LetsaGo"]
volume_db = -6.0

[node name="LetsaGo2" type="Node" parent="."]
script = ExtResource( 6 )
mario_voices = [ ExtResource( 7 ), ExtResource( 8 ) ]
luigi_voices = [ ExtResource( 9 ), ExtResource( 11 ) ]
is_p2 = true

[node name="LetsaGoPlayer" type="AudioStreamPlayer" parent="LetsaGo2"]
volume_db = -6.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 11 )
anims/select_shine = SubResource( 12 )
anims/trans_in_LevelsScreen_ShineSelectScreen = SubResource( 13 )
anims/trans_out_LevelsScreen_ShineSelectScreen = SubResource( 14 )
anims/trans_out_ShineSelectScreen_LevelsScreen = SubResource( 15 )

[node name="TransitionRect" type="ColorRect" parent="."]
margin_right = 768.0
margin_bottom = 432.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TransitionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -6.0
